[package]
name = "sd-dotenv"
version = "0.15.1"
authors = [
  "Jake Robinson <jake@spacedrive.com>",
  "Noemi Lapresta <noemi.lapresta@gmail.com>",
  "Craig Hills <chills@gmail.com>",
  "Mike Piccolo <mfpiccolo@gmail.com>",
  "Alice Maz <alice@alicemaz.com>",
  "Sean Griffin <sean@seantheprogrammer.com>",
  "Adam Sharp <adam@sharplet.me>",
  "Arpad Borsos <arpad.borsos@googlemail.com>",
]
description = "A maintained `dotenv` implementation for Rust"
homepage = "https://github.com/spacedriveapp/dotenv"
repository = "https://github.com/spacedriveapp/dotenv"
readme = "README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
edition = "2021"
rust-version = "1.63"

[dev-dependencies]
tempfile = "3.8.0"

[[example]]
name = "simple"
